--- a/projeto_teste/app_teste/templates/testes/conexao.html
+++ b/projeto_teste/app_teste/templates/testes/conexao.html
@@ -15,7 +15,7 @@
 
             <tr>
                 <td>{{row.no_dados}}</td>
-                <td><button style="background-color: #F2EBBF;">Configuração</button>&nbsp;<button style="background-color: #95BEF7;">Teste</button></td>
+                <td><a href="{% url 'config_conexao' %}"><button style="background-color: #F2EBBF;">Configuração</button></a>&nbsp;<button style="background-color: #95BEF7;">Teste</button></td>
                 <td></td>
             </tr>
             {% endfor %}
