--- a/projeto_teste/app_teste/templates/testes/base.html
+++ b/projeto_teste/app_teste/templates/testes/base.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="{% url 'lista_conexao' %}"><font color="#223A5E">Conexões</font></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><font color="#223A5E">Integração</font></a>
+                <a class="nav-link" href="{% url 'config_conexao' %}"><font color="#223A5E">Integração</font></a>
               </li>
             </ul>
           </div>
