--- a/projeto_teste/app_teste/templates/testes/config_con.html
+++ b/projeto_teste/app_teste/templates/testes/config_con.html
@@ -1,13 +1,13 @@
    {% extends 'testes/base.html' %}
    {% block conteudo%}
-   <div style="text-align: center;" class="container">
-        <h5>Conexão</h5>
+   <div class="container">
+        <h5>Paramêtros de Conexão</h5>
         <h5>Nome do Banco</h5>
-        Host:<input type="text">
-        Database:<input type="text">
-        Port:<input type="text">
-        User:<input type="text">
-        Password:<input type="text">
+        Host: <input class="form-control-sm" type="text">
+        Database: <input class="form-control-sm" type="text">
+        Port: <input class="form-control-sm" type="text">
+        User: <input class="form-control-sm" type="text">
+        Password: <input class="form-control-sm" type="text">
     </div>
     {% endblock %}
    
