--- a/projeto_teste/app_teste/templates/testes/config_con.html
+++ b/projeto_teste/app_teste/templates/testes/config_con.html
@@ -3,7 +3,7 @@
    <div class="container">
         <h5>Paramêtros de Conexão</h5>
         <h5>Nome do Banco</h5>
-        Host: <input class="form-control-sm" type="text">
+        Host: <input class="form-control-sm" type="text" value={{banco}}>
         Database: <input class="form-control-sm" type="text">
         Port: <input class="form-control-sm" type="text">
         User: <input class="form-control-sm" type="text">
