--- a/projeto_teste/app_teste/templates/testes/config_con.html
+++ b/projeto_teste/app_teste/templates/testes/config_con.html
@@ -1,13 +1,18 @@
    {% extends 'testes/base.html' %}
    {% block conteudo%}
-   <div class="container">
-        <h5>Paramêtros de Conexão</h5>
-        <h5>Nome do Banco</h5>
-        Host: <input class="form-control-sm" type="text" value={{banco}}>
-        Database: <input class="form-control-sm" type="text">
-        Port: <input class="form-control-sm" type="text">
-        User: <input class="form-control-sm" type="text">
-        Password: <input class="form-control-sm" type="text">
-    </div>
+   <form action="{% url 'config_conexao' %}" method="post">
+        <div class="container">
+            <h5>Paramêtros de Conexão</h5>
+            <h5><input style = "border: 0px; outline: none;" name="no_dados_p" type="text" value="{{ data.no_dados }}" readonly></h5>
+            <div class="row">
+                <div class="col-2" >Host: <input name="host_p" class="form-control-sm" type="text" value="{{ data.host }}"></div>
+                <div class="col-2" >Database: <input name="database_p" class="form-control-sm" type="text" value="{{ data.database }}"></div>
+                <div class="col-2" >Port: <input name="port_p" class="form-control-sm" type="text" value="{{ data.port }}"></div>
+                <div class="col-2" >User: <input name="user_p" class="form-control-sm" type="text" value="{{ data.user }}"></div>
+                <div class="col-2" >Password: <input name="password_p" class="form-control-sm" type="text" value="{{ data.password }}"></div>
+            </div>
+            <div style="color:#00BFFF;" class="container p-2">{{ st_altera }}</div>
+        </div>
+    </form>
     {% endblock %}
    
